--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Press+Start+2P');
 
-.header {
+.Nav {
   background-color: #2f2c47;
   min-height: 10vh;
   width: 100%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
@@ -13,6 +14,18 @@
   font-family: 'Press Start 2P';
 }
 
+.fadderukeLink {
+  color: #c0392b;
+  display: inline-block;
+  transition: transform 0.1s linear;
+}
+a:hover {
+  color: #b03013;
+}
+.leaderboardTitle {
+  text-decoration: none;
+  color: white;
+}
 .LeaderBoard {
   text-align: center;
   display: flex;
@@ -42,9 +55,10 @@
   align-items: center;
   align-content: center;
   font-size: 18px;
+  text-decoration: none;
 }
 
-.listElementSelected {
+.listElement:hover {
   background-color: #c8786f;
 }
 
@@ -85,7 +99,7 @@ body {
   .listElement {
     font-size: 14px;
   }
-  .header {
+  .Nav {
     font-size: 20px;
   }
 }
