--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -36,6 +36,19 @@ a:hover {
   background-color: white;
 }
 
+.GroupPage {
+  text-align: center;
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  background-color: white;
+}
+.groupImage {
+  width: 60%;
+  margin: 20px auto;
+}
 .navBar {
   text-align: center;
   display: flex;
