--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Press+Start+2P');
 
+body {
+  background: url('./resources/synthwave.jpg') no-repeat center center fixed;
+  background-size: cover;
+}
+a:hover {
+  color: #b03013;
+}
 .Nav {
   background-color: #2f2c47;
   min-height: 10vh;
@@ -13,19 +20,6 @@
   color: white;
   font-family: 'Press Start 2P';
 }
-
-.fadderukeLink {
-  color: #c0392b;
-  display: inline-block;
-  transition: transform 0.1s linear;
-}
-a:hover {
-  color: #b03013;
-}
-.leaderboardTitle {
-  text-decoration: none;
-  color: white;
-}
 .LeaderBoard {
   text-align: center;
   display: flex;
@@ -33,9 +27,8 @@ a:hover {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  background-color: white;
+  background-color: #f5f4f4;
 }
-
 .GroupPage {
   text-align: center;
   display: flex;
@@ -43,7 +36,14 @@ a:hover {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  background-color: white;
+  background-color: #f5f4f4;
+  line-height: 2em;
+}
+.loading {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  background-color: #f5f4f4;
 }
 .groupImage {
   width: 80%;
@@ -59,47 +59,45 @@ a:hover {
   justify-content: space-around;
   list-style-type: none;
 }
-
+.fadderukeLink {
+  color: #c0392b;
+  display: inline-block;
+  transition: transform 0.1s linear;
+}
+.leaderboardTitle {
+  text-decoration: none;
+  color: white;
+}
 .listElement {
   width: 100%;
-  height: 60px;
+  min-height: 60px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   align-content: center;
   font-size: 18px;
   text-decoration: none;
+  line-height: 1.2em;
 }
-
 .listElement:hover {
   background-color: #c8786f;
 }
-
 .listElementDark {
   background-color: lightgrey;
 }
-
 .boardRank {
   margin-left: 1em;
   color: #2f2c47;
 }
-
 .boardName {
   width: 25em;
   color: #2f2c47;
 }
-
 .boardScore {
   width: 2em;
   margin-right: 1.5em;
   color: #2f2c47;
 }
-
-body {
-  background: url('synthwave.jpg') no-repeat center center fixed;
-  background-size: cover;
-}
-
 .container {
   width: 700px;
   margin: 80px auto;
