--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -17,7 +17,7 @@ a:hover {
   justify-content: center;
   text-align: center;
   font-size: 24px;
-  color: white;
+  color: #f5f4f4;
   font-family: 'Press Start 2P';
 }
 .LeaderBoard {
@@ -38,6 +38,7 @@ a:hover {
   justify-content: space-between;
   background-color: #f5f4f4;
   line-height: 2em;
+  color: #2f2c47;
 }
 .loading {
   display: flex;
@@ -48,7 +49,8 @@ a:hover {
   flex-direction: column;
 }
 .groupImage {
-  width: 80%;
+  min-width: 85%;
+  max-width: 90%;
   margin: 20px auto;
 }
 .navBar {
@@ -57,17 +59,44 @@ a:hover {
   align-items: center;
   height: 3em;
   background-color: #2f2c47;
-  color: white;
+  color: #f5f4f4;
   justify-content: space-around;
   list-style-type: none;
+}
+.sortBar {
+  width: 100%;
+  margin: 0;
+  margin-bottom: 2px;
+  padding: 0;
+  display: flex;
+  justify-content: space-around;
+  font-size: 18px;
+  list-style-type: none;
+}
+.sortElement {
+  background-color: #f5f4f4;
+  text-align: center;
+  width: 33%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: #2f2c47;
+  text-decoration: none;
+}
+
+.sortElementSelected,
+.sortElement:hover {
+  background-color: #c8786f;
+  color: white;
 }
 .fadderukeLink {
   color: #c0392b;
   display: inline-block;
+  line-height: 2em;
   transition: transform 0.1s linear;
 }
 .leaderboardTitle {
   text-decoration: none;
+  text-align: center;
   color: white;
 }
 .listElement {
@@ -109,10 +138,16 @@ a:hover {
     width: 100%;
     margin: 0 0;
   }
+  .leaderboardTitle {
+    font-size: 16px;
+  }
   .listElement {
     font-size: 14px;
   }
   .Nav {
     font-size: 20px;
+  }
+  .sortBar {
+    font-size: 14px;
   }
 }
